--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "async": "~0.7.0",
-    "angular": "~1.2.16"
+    "angular": "~1.2.16",
+    "eventemitter2": "~0.4.13"
   }
 }
