--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,22 @@
     "name": "Chrome autopilot tool",
     "description": "Chrome autopilot tool",
     "manifest_version": 2,
+    "default_locale": "en",
     "version": "0.0.0",
     "browser_action": {
         "default_title" : "Chrome autopilot tool",
         "default_icon": "src/img/icon128.png",
         "default_popup": "src/html/popup.html"
     },
+    "content_scripts" : [{
+        "matches": ["<all_urls>"],
+        "js" : [
+            "src/js/lib/xpath.js",
+            "src/js/selenium-ide/recorder.js",
+            "src/js/selenium-ide/recorder-handlers.js",
+            "src/js/content_scripts.js"
+        ]
+    }],
     "permissions": [
         "<all_urls>",
         "tabs"
