Successfully passed a syntax check.

--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,15 @@
         "matches": ["<all_urls>"],
         "js" : [
             "src/js/lib/xpath.js",
+            "src/js/selenium-ide/htmlutils.js",
+            "src/js/selenium-ide/selenium-browserdetect.js",
+            "src/js/selenium-ide/selenium-atoms.js",
+            "src/js/selenium-ide/selenium-browserbot.js",
+            "src/js/selenium-ide/selenium-api.js",
+            "src/js/selenium-ide/selenium-executionloop.js",
+            "src/js/selenium-ide/selenium-testrunner.js",
+            "src/js/selenium-ide/selenium-commandhandlers.js",
+            "src/js/selenium-ide/selenium-runner.js",
             "src/js/selenium-ide/recorder.js",
             "src/js/selenium-ide/recorder-handlers.js",
             "src/js/content_scripts.js"
