--- a/manifest.json
+++ b/manifest.json
@@ -9,26 +9,9 @@
         "default_icon": "src/img/icon128.png",
         "default_popup": "src/html/popup.html"
     },
-    "content_scripts" : [{
-        "matches": ["<all_urls>"],
-        "js" : [
-            "src/js/lib/xpath.js",
-            "src/js/selenium-ide/htmlutils.js",
-            "src/js/selenium-ide/selenium-browserdetect.js",
-            "src/js/selenium-ide/selenium-atoms.js",
-            "src/js/selenium-ide/selenium-browserbot.js",
-            "src/js/selenium-ide/selenium-api.js",
-            "src/js/selenium-ide/selenium-executionloop.js",
-            "src/js/selenium-ide/selenium-testrunner.js",
-            "src/js/selenium-ide/selenium-commandhandlers.js",
-            "src/js/selenium-ide/selenium-runner.js",
-            "src/js/selenium-ide/recorder.js",
-            "src/js/selenium-ide/recorder-handlers.js",
-            "src/js/content_scripts.js"
-        ]
-    }],
     "permissions": [
         "<all_urls>",
+        "storage",
         "tabs"
     ],
     "icons": {
