--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,12 @@
     "default_locale": "en",
     "version": "0.0.0",
     "browser_action": {
-        "default_title" : "Chrome autopilot tool",
-        "default_icon": "src/img/icon128.png",
-        "default_popup": "src/html/popup.html"
+        "default_title": "Chrome autopilot tool",
+        "default_icon": "src/img/icon128.png"
+    },
+    "background": {
+        "scripts": ["src/js/background.js"],
+        "persistent": false
     },
     "permissions": [
         "<all_urls>",
