--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
     "jQuery": "~2.1.0",
     "jqueryui": "~1.10.4",
     "angular-ui-sortable": "~0.12.5"
+  },
+  "devDependencies": {
+    "power-assert": "~0.9.0"
   }
 }
