--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,7 +9,9 @@
         "default_icon": "img/icon128.png"
     },
     "background": {
-        "scripts": ["js/background.js"],
+        "scripts": [
+            "js/background.js"
+        ],
         "persistent": false
     },
     "permissions": [
