--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,6 +10,7 @@
     },
     "background": {
         "scripts": [
+            "bower_components/eventemitter2/lib/eventemitter2.js",
             "js/background.js"
         ],
         "persistent": false
