--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "gulp-tsc": "^0.8.0",
     "gulp-zip": "^0.3.4",
     "karma": "^0.12.23",
+    "karma-chrome-launcher": "^0.1.5",
     "karma-mocha": "^0.1.9",
-    "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^1.19.0",
     "run-sequence": "^0.3.6",
+    "sinon": "^1.12.1",
     "tsd": "^0.6.0-beta.4",
     "typescript": "^1.3.0"
   }
