--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gulp-espower": "^0.7.0",
     "gulp-plumber": "^0.6.1",
     "gulp-rm": "^0.2.0",
-    "gulp-tsc": "^0.8.0",
+    "gulp-sourcemaps": "^1.2.8",
+    "gulp-tsc": "^0.9.2",
     "gulp-zip": "^0.3.4",
     "karma": "^0.12.23",
     "karma-chrome-launcher": "^0.1.5",
